added signup form

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,12 @@
       <div class="wrapper">
         {{ content }}
       </div>
+      {% include signup.html %}
     </div>
 
+
     {% include footer.html %}
+
 
   </body>
 
