--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -1,10 +1,21 @@
+
+ <?php 
+ if (!empty($_SERVER['HTTP_CLIENT_IP'])) {
+ $ip=$_SERVER['HTTP_CLIENT_IP'];}
+ elseif (!empty($_SERVER['HTTP_X_FORWARDED_FOR'])) {
+ $ip=$_SERVER['HTTP_X_FORWARDED_FOR'];} else {
+ $ip=$_SERVER['REMOTE_ADDR'];}
+?>
+
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-58568835-2', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-58568835-2', 'auto');
+    ga('send', 'pageview', {
+      'dimension1':  '<?=$ip;?>'
+    });
+</script>
 
-</script> 
